# CMakeInfo

./: README.md
test01-helloworld/: CMakeLists.txt  hello.cpp
test02-library/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
test03-count_lines/: CMakeLists.txt
test04-shared/: CMakeLists.txt  README.md  test_output.hpp
test05-cond/: CMakeLists.txt  README.md
test05-objects/: main.cpp
test06-flags/: CMakeLists.txt  README.md  test_output.cpp
test07-config_build_type/: CMakeLists.txt  README.md
test08-package/: CMakeLists.txt  README.md  main.cpp  test_output.cpp  test_output.hpp
test09-text2cpp/: CMakeLists.txt  README.md
test10-tests/: CMakeLists.txt  README.md  test.cpp  test_func.cpp  test_func.hpp
test11-install/: CMakeLists.txt  README.md  bin2cpp.cpp
test12-libacidcam/: CMakeLists.txt  README.md
